more edits to html and js files

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <div class="card">
               <div class="card-body">
                 <!-- Add content here via js/jQuery? -->
+                <div id="temp"></div>
+                <div id="tempF"></div>
+                <div id="humidity"></div>
+                <div id="wind"></div>
+                <div id="uvIndex"></div>
               </div>
             </div>
           </div>
@@ -48,13 +53,6 @@
         </div>
       </div>
     </div>
-    <!-- <div class="temp"></div>
-    <div class="tempF"></div>
-    <div class="humidity"></div>
-    <div class="wind"></div>
-    <div class="uvIndex"></div>
-
-    <div class="forecast"></div> -->
 
     <script src="./script.js"></script>
   </body>
