--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="row" id="current-city-weather">
             <div class="card">
               <div class="card-body">
-                <!-- Add content here via js/jQuery? -->
+                <!-- Add content here via js/jQuery???? -->
                 <div id="temp"></div>
                 <div id="tempF"></div>
                 <div id="humidity"></div>
@@ -49,6 +49,7 @@
               </div>
             </div>
           </div>
+          <!-- 5-day forecast section... add via js and jquery too???? -->
           <div class="row" id="forecast-sec"></div>
         </div>
       </div>
