--- a/index.html
+++ b/index.html
@@ -1,60 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Weather App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <title>Weather App</title>
   </head>
-
   <body>
-    <!-- Retrieved data will be dumped here -->
-
+    <header>Weather Dashboard</header>
     <div class="container">
-      <!-- Seaarch Bar Section -->
-      <div class="row" id="search-bar">
+      <div class="row">
         <div class="col-sm">
-          <div class="input-group md-form form-sm form-1 pl-0">
-            <div class="input-group-prepend">
-              <span class="input-group-text cyan lighten-2" id="basic-text1"
-                ><i class="fas fa-search text-white" aria-hidden="true"></i
-              ></span>
-            </div>
-            <input
-              class="form-control my-0 py-1"
-              type="text"
-              placeholder="Search"
-              aria-label="Search"
-            />
+          <div class="card bg-light mb-3" style="max-width: 18rem;">
+            <nav class="navbar navbar-light bg-light">
+              <form class="form-inline">
+                <input class="userform" />
+                <button class="save" onclick="submitCity()">Save</button>
+                <div class="buttonarea"></div>
+              </form>
+            </nav>
+            <div class="card-body"></div>
           </div>
         </div>
-        <!-- Weather API -->
         <div class="col-sm">
-          <div class="row" id="current-city-weather">
-            <div class="card">
-              <div class="card-body">
-                <!-- Add content here via js/jQuery???? -->
-                <div id="temp"></div>
-                <div id="tempF"></div>
-                <div id="humidity"></div>
-                <div id="wind"></div>
-                <div id="uvIndex"></div>
-              </div>
+          <div class="jumbotron jumbotron">
+            <div class="container">
+              <h1 class="display-4" id="current-city-weather">Selected City</h1>
+              <h4 id="current-day">Date:</h4>
+              <ul>
+                <li id="Temp">Temp</li>
+                <li id="Humidity">Humidity</li>
+                <li id="WindSpeed">Wind Speed</li>
+                <li id="uvIndex">UV Index</li>
+              </ul>
             </div>
           </div>
-          <!-- 5-day forecast section... add via js and jquery too???? -->
-          <div class="row" id="forecast-sec"></div>
+        </div>
+        <div class="col-sm">
+          <div class="card bg-light mb-3" style="max-width: 18rem;">
+            <div class="card-header">Forecast</div>
+            <div class="card-body">
+              <h5 class="card-title">Forecast 5 Days</h5>
+              <p class="card-text" id="forecast-sec">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
